waybar: 'Bat' instead of 'Battery'
Signed-off-by: Ivan Bushchik <ivabus@ivabus.dev>

--- a/configs/waybar/config
+++ b/configs/waybar/config
@@ -58,9 +58,9 @@
         "interval": 1
     },
     "battery": {
-        "format": "Battery: {capacity}%",
-        "format-charging": "Battery: {capacity}% (charging)",
-        "format-plugged": "Battery: {capacity}% (plugged)",
+        "format": "Bat: {capacity}%",
+        "format-charging": "Bat: {capacity}% (charging)",
+        "format-plugged": "Bat: {capacity}% (plugged)",
         "interval": 10
     },
     "network": {
